man: Fix tail command in Makefile
Closes #19

--- a/man/Makefile
+++ b/man/Makefile
@@ -1,2 +1,2 @@
 heartbleeder.1: heartbleeder.txt heartbleeder.1.header
-	@txt2man heartbleeder.txt | tail +3 | cat heartbleeder.1.header - > heartbleeder.1
+	@txt2man heartbleeder.txt | tail -n +3 | cat heartbleeder.1.header - > heartbleeder.1
